completed all the pages

--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
     <link rel="stylesheet" href="/stylesheet/home.css" />
     <link rel="stylesheet" href="/stylesheet/about.css" />
     <link rel="stylesheet" href="/stylesheet/services.css" />
+    <link rel="stylesheet" href="/stylesheet/courses.css" />
     <!-- <link rel="stylesheet" href="/stylesheet/home2.css" /> -->
     <link rel="stylesheet" href="/stylesheet/hero.css" />
+    <link rel="stylesheet" href="/stylesheet/contact.css" />
+    <link rel="stylesheet" href="/stylesheet/footer.css" />
     <title>STRIKE</title>
   </head>
   <body>
@@ -122,6 +125,73 @@
 
         <div class="extra">
           <i class="fa-solid fa-arrow-down fa-bounce"></i>
+        </div>
+      </section>
+      <section id="course">
+        <div class="infinite-text">
+          <ul>
+            <li>Not a course factory</li>
+            &Star;
+            <li>not a course factory</li>
+            &Star;
+            <li>not a course factory</li>
+            &Star;
+          </ul>
+          <ul aria-hidden="true">
+            <li>not a course factory</li>
+            &Star;
+            <li>not a course factory</li>
+            &Star;
+            <li>not a couse factory</li>
+            &Star;
+          </ul>
+        </div>
+        <div class="cards">
+          <div class="card">
+            <div class="extra-info">
+              <span>78 Lessons</span>
+              <span>350+ hrs</span>
+            </div>
+            <div class="imgcont">
+              <img src="/assets/1.jpg" alt="" />
+            </div>
+            <h3>Data Structures & Algorithms - Advanced</h3>
+            <h4>
+              DSA Mastery: From Basics to Advanced Concepts with Real-World
+              Applications
+            </h4>
+            <div class="keywords">
+              <span>Interview Prep</span>
+              <span>Problem Solving</span>
+              <!-- <span>Competitive Programming</span> -->
+            </div>
+            <div class="price">
+              <button class="btn" data-bg="red">Enroll Now &rarr;</button>
+              <p>₹5999</p>
+            </div>
+          </div>
+          <div class="card">
+            <div class="extra-info">
+              <span>43 Lessons</span>
+              <span>230+ hrs</span>
+            </div>
+            <div class="imgcont">
+              <img src="/assets/2.jpg" alt="" />
+            </div>
+            <h3>Fullstack - Generative AI</h3>
+            <h4>
+              Fullstack AI Development: Building Intelligent Applications with
+              Generative AI
+            </h4>
+            <div class="keywords">
+              <span>Interview Prep</span>
+              <span>Real-World Projects</span>
+            </div>
+            <div class="price">
+              <button class="btn" data-bg="red">Enroll Now &rarr;</button>
+              <p>₹7999</p>
+            </div>
+          </div>
         </div>
       </section>
       <section class="s2" id="about">
@@ -259,16 +329,32 @@
             <div>
               <h1>202k+</h1>
               <h2>
-                <i class="fa-solid fa-graduation-cap" style="color: green"></i>
+                <span> Students </span>
+                <i
+                  class="fa-solid fa-graduation-cap fa-bounce"
+                  style="color: #63e6be"
+                ></i>
               </h2>
             </div>
             <div>
               <h1>14+</h1>
-              <h2><i class="fa-solid fa-school" style="color: blue"></i></h2>
+              <h2>
+                <span>Courses</span>
+                <i
+                  class="fa-solid fa-school fa-bounce"
+                  style="color: #74c0fc"
+                ></i>
+              </h2>
             </div>
             <div>
               <h1>433k+</h1>
-              <h2><i class="fa-brands fa-youtube" style="color: red"></i></h2>
+              <h2>
+                <span> Subscribers </span>
+                <i
+                  class="fa-brands fa-youtube fa-bounce"
+                  style="color: #ff1100"
+                ></i>
+              </h2>
             </div>
           </div>
         </div>
@@ -300,7 +386,7 @@
                   src="/assets/about/1.png"
                   alt="Structured DSA & Interview Preparation"
                 /> -->
-                <span>⚙️</span>
+                <span><i class="fa-solid fa-gear fa-spin-pulse"></i></span>
               </div>
               <p>
                 <span>Structured DSA & Interview Preparation</span> curriculum
@@ -318,7 +404,9 @@
                   src="/assets/about/2.png"
                   alt="Generative AI Projects & Labs"
                 /> -->
-                <span> 🤖 </span>
+                <span>
+                  <span class="fa-bounce"> 🤖 </span>
+                </span>
               </div>
             </div>
             <div class="card">
@@ -345,7 +433,12 @@
                   src="/assets/about/4.png"
                   alt="Certificate & Placement Assistance"
                 /> -->
-                <span> 🎓 </span>
+                <span>
+                  <i
+                    class="fa-solid fa-user-graduate fa-shake"
+                    style="color: #eaeaea"
+                  ></i>
+                </span>
               </div>
             </div>
           </div>
@@ -393,7 +486,165 @@
           <img src="/assets/paper-tear.png" alt="" />
         </div>
       </section> -->
+      <section id="contact">
+        <div class="background-canvas">
+          <div class="contact-container">
+            <div class="contact-info">
+              <h2>Let's Connect</h2>
+              <p>Drop us a line! We're ready to start building your future.</p>
+
+              <div class="info-list">
+                <div class="info-item">
+                  <i class="fas fa-envelope"></i>
+                  <div>
+                    <h3>Email</h3>
+                    <p>support@strike.com</p>
+                  </div>
+                </div>
+
+                <div class="info-item">
+                  <i class="fas fa-phone-alt"></i>
+                  <div>
+                    <h3>Phone</h3>
+                    <p>+91-8397238292</p>
+                  </div>
+                </div>
+
+                <div class="info-item">
+                  <i class="fas fa-map-marker-alt"></i>
+                  <div>
+                    <h3>Office</h3>
+                    <p>Mumbai, India</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="social-icons">
+                <a href="#" class="icon-link"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="icon-link"
+                  ><i class="fab fa-linkedin-in"></i
+                ></a>
+                <a href="#" class="icon-link"><i class="fab fa-github"></i></a>
+              </div>
+            </div>
+
+            <div class="contact-form-wrapper">
+              <form class="contact-form">
+                <h3>Got a Query ?</h3>
+
+                <div class="name-email-group">
+                  <div class="form-group">
+                    <input
+                      type="text"
+                      id="name"
+                      name="name"
+                      required
+                      placeholder="Full Name"
+                    />
+                    <label for="name">My name is...</label>
+                  </div>
+                  <div class="form-group">
+                    <input
+                      type="email"
+                      id="email"
+                      name="email"
+                      required
+                      placeholder="Work Email"
+                    />
+                    <label for="email">You can reach me at...</label>
+                  </div>
+                </div>
+
+                <div class="form-group">
+                  <input
+                    type="text"
+                    id="subject"
+                    name="subject"
+                    required
+                    placeholder="Project Title / Subject"
+                  />
+                  <label for="subject">I'm interested in...</label>
+                </div>
+
+                <div class="form-group">
+                  <textarea
+                    id="message"
+                    name="message"
+                    rows="4"
+                    required
+                    placeholder="Your Message or query Details"
+                  ></textarea>
+                  <label for="message">Tell us more about the query...</label>
+                </div>
+
+                <button type="submit" class="button">
+                  Send Message &rarr;
+                </button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+      <footer class="site-footer">
+        <div class="footer-main-content">
+          <div class="footer-column footer-brand">
+            <p class="logo-text">&lt;STRIKE /&gt;</p>
+            <p class="tagline">
+              Crafting modern digital experiences with code and passion.
+            </p>
+            <div class="footer-social">
+              <a href="#" class="icon-link"><i class="fab fa-twitter"></i></a>
+              <a href="#" class="icon-link"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
+              <a href="#" class="icon-link"><i class="fab fa-github"></i></a>
+            </div>
+          </div>
+
+          <div class="footer-column">
+            <h3>Quick Links</h3>
+            <nav class="footer-nav">
+              <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Courses</a></li>
+                <li><a href="#">Case Studies</a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Contact</a></li>
+              </ul>
+            </nav>
+          </div>
+
+          <div class="footer-column">
+            <h3>Contact</h3>
+            <div class="contact-detail">
+              <i class="fas fa-envelope"></i>
+              <p>support@strike.com</p>
+            </div>
+            <div class="contact-detail">
+              <i class="fas fa-phone-alt"></i>
+              <p>+91-9832742332</p>
+            </div>
+            <div class="contact-detail">
+              <i class="fas fa-map-marker-alt"></i>
+              <p>Mumbai, India</p>
+            </div>
+          </div>
+
+          <div class="footer-column footer-cta">
+            <h3>Any Query ?</h3>
+            <p>
+              Ready to transform your brand? Let's discuss your vision today.
+            </p>
+            <a href="#" class="cta-button"
+              >Contact Us <i class="fas fa-arrow-right"></i
+            ></a>
+          </div>
+        </div>
+
+        <div class="footer-bottom">
+          <p>&copy; 2025 STRIKE. All rights reserved.</p>
+        </div>
+      </footer>
     </main>
-    <footer></footer>
   </body>
 </html>
