updated UI for responsiveness

--- a/index.html
+++ b/index.html
@@ -386,7 +386,12 @@
                   src="/assets/about/1.png"
                   alt="Structured DSA & Interview Preparation"
                 /> -->
-                <span><i class="fa-solid fa-gear fa-spin-pulse"></i></span>
+                <span
+                  ><i
+                    class="fa-solid fa-atom fa-bounce"
+                    style="color: #ffd43b"
+                  ></i
+                ></span>
               </div>
               <p>
                 <span>Structured DSA & Interview Preparation</span> curriculum
@@ -405,7 +410,12 @@
                   alt="Generative AI Projects & Labs"
                 /> -->
                 <span>
-                  <span class="fa-bounce"> 🤖 </span>
+                  <span class="fa-bounce">
+                    <i
+                      class="fa-solid fa-laptop-code fa-bounce fa-sm"
+                      style="color: #8dc9f7"
+                    ></i>
+                  </span>
                 </span>
               </div>
             </div>
@@ -415,7 +425,12 @@
                   src="/assets/about/3.png"
                   alt="Mock Interviews & Career Guidance"
                 /> -->
-                <span> 🎯 </span>
+                <span>
+                  <i
+                    class="fa-solid fa-person-chalkboard fa-bounce"
+                    style="color: #f74a00"
+                  ></i>
+                </span>
               </div>
               <p>
                 <span>Mock interviews and career guidance</span> from industry
@@ -435,8 +450,8 @@
                 /> -->
                 <span>
                   <i
-                    class="fa-solid fa-user-graduate fa-shake"
-                    style="color: #eaeaea"
+                    class="fa-solid fa-user-graduate fa-bounce"
+                    style="color: #29f600"
                   ></i>
                 </span>
               </div>
