added readme and updated the UI for best UX

--- a/index.html
+++ b/index.html
@@ -40,7 +40,6 @@
     />
 
     <!-- css file link -->
-    <!-- <link rel="stylesheet" href="/stylesheet/utils/background.css" /> -->
     <link rel="stylesheet" href="/stylesheet/utils/arrowbutton.css" />
     <link rel="stylesheet" href="/stylesheet/header.css" />
     <link rel="stylesheet" href="/stylesheet/home.css" />
@@ -48,7 +47,6 @@
     <link rel="stylesheet" href="/stylesheet/services.css" />
     <link rel="stylesheet" href="/stylesheet/courses.css" />
     <link rel="stylesheet" href="/stylesheet/review.css" />
-    <!-- <link rel="stylesheet" href="/stylesheet/hero.css" /> -->
     <link rel="stylesheet" href="/stylesheet/strikeExtra.css" />
     <link rel="stylesheet" href="/stylesheet/contact.css" />
     <link rel="stylesheet" href="/stylesheet/footer.css" />
@@ -840,7 +838,7 @@
         <div class="footer-bottom">
           <p>
             &copy; 2025 STRIKE. Hackathon project by
-            <a href="https://sumeet.live"> sumeet </a>
+            <a href="https://sumeet.live" target="_blank"> sumeet </a>
           </p>
         </div>
       </footer>
