updated links and meta information

--- a/index.html
+++ b/index.html
@@ -23,6 +23,34 @@
       href="favicon_io/favicon-16x16.png"
     />
     <link rel="manifest" href="favicon_io/site.webmanifest" />
+
+    <!-- meta tags -->
+    <meta name="title" content="STRIKE - DSA & Generative AI Courses" />
+    <meta
+      name="description"
+      content="STRIKE is a premier paid course platform offering specialized programs in Data Structures & Algorithms (DSA) and Generative AI. Our project-based learning approach, combined with expert mentorship and placement assistance, empowers students to excel in technical interviews and real-world applications."
+    />
+    <meta
+      name="keywords"
+      content="DSA, Generative AI,Sumeet,sumeet umbalkar, sumeet57, Coding Courses, Tech Education, Interview Preparation, Project-Based Learning, Mentor Support, Placement Assistance"
+    />
+    <meta name="author" content="Strike" />
+    <meta name="robots" content="index, follow" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta name="language" content="English" />
+    <meta name="revisit-after" content="7 days" />
+    <meta name="og:title" content="STRIKE - DSA & Generative AI Courses" />
+    <meta
+      name="og:description"
+      content="STRIKE is a premier paid course platform offering specialized programs in Data Structures & Algorithms (DSA) and Generative AI. Our project-based learning approach, combined with expert mentorship and placement assistance, empowers students to excel in technical interviews and real-world applications."
+    />
+    <meta
+      name="og:image"
+      content="/assets/14a41f92-f694-4348-8c9f-0b42e0197539-Photoroom.png"
+    />
+    <meta name="og:url" content="https://strike.sumeet.live" />
+    <meta name="og:type" content="website" />
+
     <!-- google font  -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -60,7 +88,7 @@
         <div class="left">
           <img
             src="/assets/14a41f92-f694-4348-8c9f-0b42e0197539-Photoroom.png"
-            alt=""
+            alt="logo"
           />
           <p>STRIKE</p>
         </div>
@@ -70,18 +98,17 @@
           <a href="#home">HOME</a>
           <a href="#about">ABOUT</a>
           <a href="#course">COURSE</a>
-          <a class="live-nav" href="#live">LIVE</a>
+          <a class="live-nav" href="#">LIVE</a>
           <a href="#contact"><i class="fa-solid fa-user"></i></a>
         </div>
 
-        <!-- Hamburger Icon (Label linked to the Checkbox) -->
         <label for="menu-toggle" class="menuIcon">
           <span class="bar"></span>
           <span class="bar"></span>
           <span class="bar"></span>
         </label>
 
-        <!-- Mobile Full-Screen Menu -->
+        <!-- Mobile Fullscreen Menu -->
         <div class="fullNav">
           <label for="menu-toggle" class="nav-item-close">
             <a href="#home">HOME</a>
@@ -100,12 +127,9 @@
     </header>
     <main>
       <section class="s1" id="home">
-        <!-- <div class="part1">
-          <h1 data-content="STRIKE">STRIKE</h1>
-        </div> -->
         <div class="part2">
           <div class="model">
-            <img src="/assets/home/rohitmodel.png" alt="" />
+            <img src="/assets/home/rohitmodel.png" alt="AI-model-img" />
           </div>
           <div class="text">
             <div class="hero">
@@ -143,6 +167,7 @@
                 <pre><code>&lt;h1&gt; STRIKE &lt;/h1&gt;</code></pre>
                 <pre><code>&lt;h2&gt; Coming Soon.. &lt;/h2&gt;</code></pre>
                 <pre><code>&lt;i&gt; 🚀 &lt;/i&gt;</code></pre>
+                <pre><code>&lt;i&gt; https://sumeet.live/ &lt;/i&gt;</code></pre>
               </div>
             </div>
           </div>
@@ -178,7 +203,7 @@
               <span>350+ hrs</span>
             </div>
             <div class="imgcont">
-              <img src="/assets/6.jpeg" alt="" />
+              <img src="/assets/6.jpeg" alt="course-1" />
             </div>
             <h3>Data Structures & Algorithms - Advanced</h3>
             <h4>
@@ -201,7 +226,7 @@
               <span>230+ hrs</span>
             </div>
             <div class="imgcont">
-              <img src="/assets/3.jpg" alt="" />
+              <img src="/assets/3.jpg" alt="course-2" />
             </div>
             <h3>Fullstack Development - Generative AI</h3>
             <h4>
@@ -314,7 +339,7 @@
             <div class="cards">
               <div class="card">
                 <div class="imgcont">
-                  <img src="/assets/about/rohit.jpeg" alt="" />
+                  <img src="/assets/about/rohit.jpeg" alt="rohit-negi" />
                 </div>
                 <div class="info">
                   <h3>Rohit Negi</h3>
@@ -332,7 +357,7 @@
               </div>
               <div class="card">
                 <div class="imgcont">
-                  <img src="/assets/about/aditya.jpeg" alt="" />
+                  <img src="/assets/about/aditya.jpeg" alt="aditya-tandon" />
                 </div>
                 <div class="info">
                   <h3>Aditya Tandon</h3>
@@ -352,34 +377,34 @@
           </div>
           <div class="stat">
             <div>
-              <h1>202k+</h1>
-              <h2>
+              <h2>202k+</h2>
+              <h3>
                 <span> Students </span>
                 <i
                   class="fa-solid fa-graduation-cap fa-bounce"
                   style="color: #63e6be"
                 ></i>
-              </h2>
+              </h3>
             </div>
             <div>
-              <h1>14+</h1>
-              <h2>
+              <h2>14+</h2>
+              <h3>
                 <span>Courses</span>
                 <i
                   class="fa-solid fa-school fa-bounce"
                   style="color: #74c0fc"
                 ></i>
-              </h2>
+              </h3>
             </div>
             <div>
-              <h1>433k+</h1>
-              <h2>
+              <h2>433k+</h2>
+              <h3>
                 <span> Subscribers </span>
                 <i
                   class="fa-brands fa-youtube fa-bounce"
                   style="color: #ff1100"
                 ></i>
-              </h2>
+              </h3>
             </div>
           </div>
         </div>
@@ -729,7 +754,7 @@
 
             <div class="contact-form-wrapper">
               <form class="contact-form">
-                <h3>Got a Query ?</h3>
+                <h3>Any Query ?</h3>
 
                 <div class="name-email-group">
                   <div class="form-group">
@@ -784,6 +809,9 @@
           </div>
         </div>
       </section>
+
+      <!-- at the end footer is not rendering outside of main -->
+      <!-- so i have to put it inside main  -->
       <footer class="site-footer">
         <div class="footer-main-content">
           <div class="footer-column footer-brand">
@@ -838,7 +866,7 @@
         <div class="footer-bottom">
           <p>
             &copy; 2025 STRIKE. Hackathon project by
-            <a href="https://sumeet.live" target="_blank"> sumeet </a>
+            <a href="https://sumeet.live" target="_blank"> sumeet.live </a>
           </p>
         </div>
       </footer>
